update: - add `container` helper class - refactor styling inside `@layer base` - add styling to `#root`

--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,26 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  margin: 0;
-  font-family: 'Lato' ,sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+#root {
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer base {
+	body {
+		margin: 0;
+		font-family: 'Lato', sans-serif;
+		-webkit-font-smoothing: antialiased;
+		-moz-osx-font-smoothing: grayscale;
+	}
+
+	code {
+		font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+			monospace;
+	}
+
+	.container {
+		@apply max-w-screen-xl mx-auto p-4;
+	}
 }
