feat: add carousel component for home page

--- a/src/index.css
+++ b/src/index.css
@@ -26,4 +26,13 @@
 	.container {
 		@apply max-w-screen-xl mx-auto p-4;
 	}
+
+	.carousel {
+		display: inline-flex;
+		overflow-x: hidden;
+		scroll-snap-type: x mandatory;
+		-webkit-overflow-scrolling: touch;
+		scrollbar-width: none;
+		-ms-overflow-style: none;
+	}
 }
