--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
 		font-family: 'Lato', sans-serif;
 		-webkit-font-smoothing: antialiased;
 		-moz-osx-font-smoothing: grayscale;
+		@apply dark:bg-gray-900 dark:text-white;
 	}
 
 	code {
