--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,26 @@
 			monospace;
 	}
 
+	h1,
+	.h1 {
+		@apply text-2xl font-bold md:text-4xl;
+	}
+
+	h2,
+	.h2 {
+		@apply text-xl font-bold md:text-3xl;
+	}
+
+	h3,
+	.h3 {
+		@apply text-lg font-bold md:text-2xl;
+	}
+
+	h4,
+	.h4 {
+		@apply text-base font-bold md:text-lg;
+	}
+
 	.container {
 		@apply max-w-screen-xl mx-auto p-4;
 	}
